# cmake-sfml-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
cmake_modules/: FindSFML.cmake
tasks/: cmake_build.sh  cmake_config_debug.sh  cmake_config_release.sh  compile_commands_fix.sh  cpptasksBACKUP.vim
